# Qt-Tutorial

./: CMakeLists.txt  Makefile  README.md
01_QtSetup/: CMakeLists.txt  README.md  cmake_explaination.md  comile-features.md  main.cpp
02_QLabel/: CMakeLists.txt  README.md  main.cpp
03_QLineEdit/: CMakeLists.txt  README.md  main.cpp  myWindow.hpp
04_QPushButton/: CMakeLists.txt  README.md  myWindow.hpp
05_QLayouts/: CMakeLists.txt  README.md  myWindow.cpp  myWindow.hpp
06_QLayouts/: CMakeLists.txt  README.md  main.cpp
07_QLayouts/: CMakeLists.txt  README.md  main.cpp
TextEditor/: CMakeLists.txt  main.cpp
TextEditor/main_window/inc/: mainWindow.hpp
TextEditor/main_window/src/: helperFunctions.cpp  mainWin.cpp  menuBar.cpp  myPageSetup.cpp  new.cpp  open.cpp  save.cpp  statusBar.cpp  toolbar.cpp
TextEditor/resources/: resources.qrc
